--- a/src/Tetromino.cls
+++ b/src/Tetromino.cls
@@ -22,8 +22,8 @@ Public Enum TetrominoShape
     T
     J
     L
-    s
-    z
+    S
+    Z
 End Enum
 '=============================================================================80
 ' Variable Container
@@ -89,7 +89,7 @@ With New Tetromino
     Set .Blocks = GetTetrominoBlocks(Shape)
     Call .SetBlocksParent(.Self)
     
-    If Shape = TetrominoShape.L Or Shape = TetrominoShape.z Then
+    If Shape = TetrominoShape.L Or Shape = TetrominoShape.Z Then
         Call .Reflect
     End If
     
@@ -173,7 +173,7 @@ Private Function GetTetrominoBlocks(ByVal Shape As TetrominoShape) As Collection
 '                               Call Coll.Add(Block.GetBlock(0, 0))
 '                               Call Coll.Add(Block.GetBlock(0, 1))
 '                               Call Coll.Add(Block.GetBlock(-1, 1))
-        Case TetrominoShape.s, TetrominoShape.z
+        Case TetrominoShape.S, TetrominoShape.Z
                                Call Coll.Add(Block.GetBlock(-1, 1))
                                Call Coll.Add(Block.GetBlock(-1, 0))
                                Call Coll.Add(Block.GetBlock(0, 0))
@@ -194,7 +194,7 @@ Select Case Shape
     Case TetrominoShape.T: Let GetTetrominoColor = RGB(128, 0, 128)
     Case TetrominoShape.J: Let GetTetrominoColor = RGB(0, 0, 255)
     Case TetrominoShape.L: Let GetTetrominoColor = RGB(255, 128, 0)
-    Case TetrominoShape.s: Let GetTetrominoColor = RGB(0, 255, 0)
-    Case TetrominoShape.z: Let GetTetrominoColor = RGB(255, 0, 0)
+    Case TetrominoShape.S: Let GetTetrominoColor = RGB(0, 255, 0)
+    Case TetrominoShape.Z: Let GetTetrominoColor = RGB(255, 0, 0)
 End Select
 End Function
